Fetch GW2 accounts and generate subtokens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.org.springframework.web=DEBUG
 spring.security.oauth2.client.registration.gw2me.client-name=gw2.me
 spring.security.oauth2.client.registration.gw2me.client-id=<client_id>
 spring.security.oauth2.client.registration.gw2me.client-secret=<client_secret>
-spring.security.oauth2.client.registration.gw2me.scope=identify
+spring.security.oauth2.client.registration.gw2me.scope=identify,gw2:account
 
 spring.security.oauth2.client.provider.gw2me.issuer-uri=https://gw2.me
 spring.security.oauth2.client.provider.gw2me.user-info-uri=https://gw2.me/api/user
